# GTRusthop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: planning_strategy_benchmark.rs
docs/: DocumentationIndex.md  Rust.md  api.md  cross-platform-commands.md  examples.md  runtime_benchmark.md
src/: error.rs  lib.rs  main.rs
src/core/: domain.rs  mod.rs  multigoal.rs  state.rs
src/domains/: blocks_htn.rs  mod.rs  simple_hgn.rs  simple_htn.rs
src/examples/: backtracking_htn_example.rs  blocks_htn_example.rs  lazy_lookahead_example.rs  logistics_hgn_example.rs  mod.rs  regression_tests.rs  simple_hgn_example.rs  simple_htn_example.rs
src/planning/: mod.rs  planner.rs  planner_instance.rs  strategy.rs  verification.rs
